--- a/date/2025-04/page-6.htm
+++ b/date/2025-04/page-6.htm
@@ -118,6 +118,57 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-04-06">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/news/article-89339.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/02304af5d6ae5c5ec3e37e4b96cee2ef.webp" alt="动物疫苗使用方法（动物疫苗接种方法有哪些）" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/news/article-89339.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">动物疫苗使用方法（动物疫苗接种方法有哪些）</h3>
+                            </a>
+                            <p class="mt-4">摘要：       本篇文章给大家谈谈动物疫苗使用方法，以及动物疫苗接种方法有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗怎么打2、...        本篇文</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月6日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-04-05">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/news/article-88624.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="东北农大动物医院价目表查询（东北农大动物医院价目表查询最新）" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/news/article-88624.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">东北农大动物医院价目表查询（东北农大动物医院价目表查询最新）</h3>
+                            </a>
+                            <p class="mt-4">摘要：       今天给各位分享东北农大动物医院价目表查询的知识，其中也会对东北农大动物医院价目表查询最新进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、农.</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月5日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-04-05">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/news/article-88623.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/1694a934d953b0dc61fe40ac4034f27c.webp" alt="windows下安装redis_在线工具" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/news/article-88623.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">windows下安装redis_在线工具</h3>
+                            </a>
+                            <p class="mt-4">一、安装redis 下载地址： https://github.com/MicrosoftArchive/redis/releases Redis 支持 32 位和 64 位。这个需要根据你系统平台的实</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月5日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-04-04">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -237,57 +288,6 @@
                                 4月2日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-02">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/news/article-86453.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="哪里可以免费领养猫咪（哪里可以免费领养猫咪的猫）" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/news/article-86453.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">哪里可以免费领养猫咪（哪里可以免费领养猫咪的猫）</h3>
-                            </a>
-                            <p class="mt-4">摘要：       本篇文章给大家谈谈哪里可以免费领养猫咪，以及哪里可以免费领养猫咪的猫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里可以领养猫?2、...       </p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月2日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-01">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了美国、日本、加拿大、欧洲、香港、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月1日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-01">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/news/article-85729.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="长沙宠物领养贴吧 长沙宠物领养贴吧论坛" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/news/article-85729.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</h3>
-                            </a>
-                            <p class="mt-4">摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月1日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/date/2025-04/page-5.htm">&laquo;</a></li> <li><a href="/date/2025-04/">1</a></li><li><a href="/date/2025-04/page-2.htm">2</a></li><li><a href="/date/2025-04/page-3.htm">3</a></li><li><a href="/date/2025-04/page-4.htm">4</a></li><li><a href="/date/2025-04/page-5.htm">5</a></li><li class="active"><span>6</span></li><li><a href="/date/2025-04/page-7.htm">7</a></li> <li><a href="/date/2025-04/page-7.htm">&raquo;</a></li></ul>            </div>
@@ -297,8 +297,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-97508.htm">宠物领养软件下载免费 宠物领养软件下载免费大全</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养软件下载免费的问题，于是小编就整理了3个相关介绍宠物领养软件下载免费的解答，让我们一起看看吧。有没有专门养宠物的App手</p>
+                <h4><a href="/news/article-85728.htm">和田宠物医院污水处理价格多少（宠物店污水处理设备）</a></h4>
+                <p>摘要：       今天给各位分享和田宠物医院污水处理价格多少的知识，其中也会对宠物店污水处理设备进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物医院未配.</p>
             </div>
         </div>
     </div>
@@ -307,8 +307,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-81477.htm">动物疫苗可以自己打吗现在（动物疫苗可以自己打吗现在疫情）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗可以自己打吗现在的知识，其中也会对动物疫苗可以自己打吗现在疫情进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎么自.</p>
+                <h4><a href="/free-nodes/2025-3-5-free-ssr-subscribe.htm">3月5日更新20M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、香港、日本、美国、新加坡、欧洲、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -317,8 +317,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66142.htm">美联众合动物医院美容价格 美联众合动物医院价目表</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于美联众合动物医院美容价格的问题，于是小编就整理了4个相关介绍美联众合动物医院美容价格的解答，让我们一起看看吧。太原市的宠物医院哪</p>
+                <h4><a href="/news/article-93047.htm">Spring的两种依赖注入方式:setter方法注入与构造方法注入</a></h4>
+                <p>&nbsp; &nbsp;Spring的两种依赖注入方式：setter注入与构造方法注入，这两种方法的不同主要就是在xml文件下对应使用property和constructor-arg属性， 例如： </p>
             </div>
         </div>
     </div>
@@ -327,8 +327,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-68681.htm">猫咪三针多久打完（猫咪三针多久打完有效）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫咪三针多久打完，以及猫咪三针多久打完有效对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打的三针疫苗是什么2、...        本</p>
+                <h4><a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm">4月11日更新21.7M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、韩国、欧洲、美国、新加坡、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -337,8 +337,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-19-clash-v2ray-ss-ssr.htm">4月19日更新23M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、日本、香港、欧洲、新加坡、美国、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-86457.htm">动物防疫计划书怎么写（动物防疫计划的编制）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物防疫计划书怎么写，以及动物防疫计划的编制对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、动物防疫工作个人总结报告...        </p>
             </div>
         </div>
     </div>
@@ -347,8 +347,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-31-node-share-links.htm">3月31日更新20.1M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、新加坡、日本、韩国、香港、加拿大等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-68039.htm">500公斤饲料粉碎搅拌机 500公斤饲料粉碎搅拌机多少钱</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于500公斤饲料粉碎搅拌机的问题，于是小编就整理了3个相关介绍500公斤饲料粉碎搅拌机的解答，让我们一起看看吧。饲料粉碎搅拌机粉碎</p>
             </div>
         </div>
     </div>
@@ -357,8 +357,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-85729.htm">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
+                <h4><a href="/news/article-91574.htm">有人死于被猫抓伤吗（有人死于被猫抓伤吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈有人死于被猫抓伤吗，以及有人死于被猫抓伤吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、真的有被猫抓伤死的人吗2、...        </p>
             </div>
         </div>
     </div>
@@ -367,8 +367,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-71288.htm">狗粮属于什么经营范围（狗粮属于什么商品类目）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈狗粮属于什么经营范围，以及狗粮属于什么商品类目对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、50的米桶可以装30的狗粮吗...     </p>
+                <h4><a href="/news/article-94561.htm">动态指针时钟：利用pyqt5制作指针钟表显示实时时间</a></h4>
+                <p>【阅读全文】 文末附完整源代码实现过程... 想实现这样一个功能，然后pyqt5中又没有现成的组件可以使用，于是就想着只能通过绘图的方式来实现。说到绘图的话，turtle框架无疑是最常见的选择，但其实</p>
             </div>
         </div>
     </div>
@@ -377,8 +377,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-90828.htm">猫儿身上有跳蚤怎么去除（猫身上有跳蚤怎么治）</a></h4>
-                <p>摘要：       今天给各位分享猫儿身上有跳蚤怎么去除的知识，其中也会对猫身上有跳蚤怎么治进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫去跳蚤最简单的方.</p>
+                <h4><a href="/news/article-82152.htm">领养宠物用什么软件（领养宠物去什么平台比较好）</a></h4>
+                <p>摘要：       今天给各位分享领养宠物用什么软件的知识，其中也会对领养宠物去什么平台比较好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、如何在新版QQ空.</p>
             </div>
         </div>
     </div>
@@ -387,8 +387,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-80072.htm">SpringBoot：Controller层调用Service层，出现bug</a></h4>
-                <p>bug描述：无法直接调用service层中的方法，service层上的断点打上直接变成灰色禁用标识，且controller层中的方法无法执行到service中。 之前没遇到过，百思不得其解，maven</p>
+                <h4><a href="/free-nodes/2025-3-25-free-clash.htm">3月25日更新18.7M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、加拿大、新加坡、日本、韩国、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -399,7 +399,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">61</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">64</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
