--- a/date/2025-04/page-2.htm
+++ b/date/2025-04/page-2.htm
@@ -118,6 +118,57 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-04-20">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-4-20-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/3f1275233c413ecd16089d50a0615f3d.webp" alt="4月20日更新22.1M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-4-20-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">4月20日更新22.1M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了美国、欧洲、加拿大、韩国、日本、新加坡、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月20日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-04-20">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/news/article-99746.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/1858f1fbda8b7e0681ab8c087dbb22a2.webp" alt="宠物粮行业发展趋势分析报告（宠物粮行业发展趋势分析报告范文）" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/news/article-99746.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">宠物粮行业发展趋势分析报告（宠物粮行业发展趋势分析报告范文）</h3>
+                            </a>
+                            <p class="mt-4">摘要：       本篇文章给大家谈谈宠物粮行业发展趋势分析报告，以及宠物粮行业发展趋势分析报告范文对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、你认为如今的宠物行业发展..</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月20日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-04-20">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/news/article-99745.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/3f1275233c413ecd16089d50a0615f3d.webp" alt="虚拟机搭建负载均衡，mysql主从复制和读写分离（四、搭建主从复制和读写分离）" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/news/article-99745.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">虚拟机搭建负载均衡，mysql主从复制和读写分离（四、搭建主从复制和读写分离）</h3>
+                            </a>
+                            <p class="mt-4">虚拟机搭建负载均衡，mysql主从复制和读写分离（一、搭建虚拟机） 虚拟机搭建负载均衡，mysql主从复制和读写分离（二、克隆虚拟机） 虚拟机搭建负载均衡，mysql主从复制和读写分离（三、搭建负载均</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月20日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-04-19">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -237,57 +288,6 @@
                                 4月17日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-17">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/news/article-97507.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/34661d96c32475b8df65ddfa1ef2f56e.webp" alt="动物医院名字大全集图片（动物医院牌匾）" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/news/article-97507.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">动物医院名字大全集图片（动物医院牌匾）</h3>
-                            </a>
-                            <p class="mt-4">摘要：       本篇文章给大家谈谈动物医院名字大全集图片，以及动物医院牌匾对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、请帮忙起个宠物医院的名字...        本篇</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月17日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-16">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/news/article-96821.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="C++ 类成员指针" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/news/article-96821.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">C++ 类成员指针</h3>
-                            </a>
-                            <p class="mt-4">C++的类成员指针是一种奇葩的指针。 假设现在我们要表示一个三维的点，现在有两种定义方式： struct point1{ 	int x, y, z; };  struct point2{ 	int c</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月16日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-16">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/news/article-96820.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/3f1275233c413ecd16089d50a0615f3d.webp" alt="Java中Scanner的方法" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/news/article-96820.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">Java中Scanner的方法</h3>
-                            </a>
-                            <p class="mt-4">JavaScanner的next与nextLine方法  1. 前言 在Scanner类中 有许多的方法 常用的有 nextInt()、nextFloat()、nextDouble()、next()、</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月16日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/date/2025-04/">&laquo;</a></li> <li><a href="/date/2025-04/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-04/page-3.htm">3</a></li><li><a href="/date/2025-04/page-4.htm">4</a></li><li><a href="/date/2025-04/page-5.htm">5</a></li><li><a href="/date/2025-04/page-6.htm">6</a></li><li><a href="/date/2025-04/page-7.htm">7</a></li> <li><a href="/date/2025-04/page-3.htm">&raquo;</a></li></ul>            </div>
@@ -297,8 +297,38 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-97507.htm">动物医院名字大全集图片（动物医院牌匾）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物医院名字大全集图片，以及动物医院牌匾对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、请帮忙起个宠物医院的名字...        本篇</p>
+                <h4><a href="/news/article-83588.htm">东北农业大学动物医学院研究生院（东北农大动物科学学院）</a></h4>
+                <p>摘要：       今天给各位分享东北农业大学动物医学院研究生院的知识，其中也会对东北农大动物科学学院进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、东北农业.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-7-free-node-subscribe.htm">3月7日更新22.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、新加坡、欧洲、日本、韩国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-23-free-ssr-node.htm">4月23日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、日本、加拿大、新加坡等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-95328.htm">属羊的人养猫对财运有好处吗（属羊的养猫好吗风水说法）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈属羊的人养猫对财运有好处吗，以及属羊的养猫好吗风水说法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、家里养猫对财运好不好...     </p>
             </div>
         </div>
     </div>
@@ -317,8 +347,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-21-free-ssr-node.htm">3月21日更新19.6M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、日本、韩国、加拿大等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-3-5-free-ssr-subscribe.htm">3月5日更新20M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、香港、日本、美国、新加坡、欧洲、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -327,8 +357,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-80073.htm">新手养猫入门必备攻略有哪些（新手养猫宝典）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈新手养猫入门必备攻略有哪些，以及新手养猫宝典对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、新手养猫科普指南2、...        本篇</p>
+                <h4><a href="/news/article-75286.htm">宠物鲜粮市场规模分析报告（宠物粮食市场）</a></h4>
+                <p>摘要：       今天给各位分享宠物鲜粮市场规模分析报告的知识，其中也会对宠物粮食市场进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物的用品市场分析?..</p>
             </div>
         </div>
     </div>
@@ -337,8 +367,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-23-free-shadowrocket-node.htm">3月23日更新19.5M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、韩国、美国、欧洲、香港、新加坡等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-75966.htm">违约养宠物还能退押金吗怎么处理（宠物店押金不退可以报警吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈违约养宠物还能退押金吗怎么处理，以及宠物店押金不退可以报警吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、领养宠物押金一年返还套路怎..</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-82873.htm">动物疫苗接种方法及注意事项有哪些呢图片大全（动物疫苗接种方式）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗接种方法及注意事项有哪些呢图片大全的知识，其中也会对动物疫苗接种方式进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
             </div>
         </div>
     </div>
@@ -353,53 +393,13 @@
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-9-free-clash-subscribe.htm">3月9日更新18.9M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、日本、欧洲、美国、香港等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-3-shadowrocket-node.htm">4月3日更新22.1M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、新加坡、美国、欧洲、日本、加拿大等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-87163.htm">Java ArrayList集合(Java动态数组)</a></h4>
-                <p>Java ArrayList集合（Java动态数组）  一、ArrayList集合的概述和基本使用   1.概述 2.基本使用   二、ArrayList集合的详细介绍   1.定义一个ArrayLi</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-95327.htm">C# DataTable去重，根据列名去重保留其他列</a></h4>
-                <p>//去掉重复行 DataView dv = table.DefaultView; table = dv.ToTable(true, new string[] { "name", "code" }); </p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">61</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">64</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
