--- a/date/2025-04/page-4.htm
+++ b/date/2025-04/page-4.htm
@@ -118,6 +118,57 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-04-13">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/news/article-94561.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/34661d96c32475b8df65ddfa1ef2f56e.webp" alt="动态指针时钟：利用pyqt5制作指针钟表显示实时时间" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/news/article-94561.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">动态指针时钟：利用pyqt5制作指针钟表显示实时时间</h3>
+                            </a>
+                            <p class="mt-4">【阅读全文】 文末附完整源代码实现过程... 想实现这样一个功能，然后pyqt5中又没有现成的组件可以使用，于是就想着只能通过绘图的方式来实现。说到绘图的话，turtle框架无疑是最常见的选择，但其实</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月13日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-04-12">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-4-12-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="4月12日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-4-12-node-share-links.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">4月12日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了日本、欧洲、韩国、香港、美国、新加坡、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月12日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-04-12">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/news/article-93803.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/5609cbe4a2710c44400fb8b4e8928ba9.webp" alt="领养宠物用不用钱（领养宠物要给红包吗）" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/news/article-93803.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">领养宠物用不用钱（领养宠物要给红包吗）</h3>
+                            </a>
+                            <p class="mt-4">摘要：       本篇文章给大家谈谈领养宠物用不用钱，以及领养宠物要给红包吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、去宠物店收养小猫咪要钱吗?...        本</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                4月12日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-04-12">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -237,62 +288,81 @@
                                 4月9日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-09">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/news/article-91574.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5609cbe4a2710c44400fb8b4e8928ba9.webp" alt="有人死于被猫抓伤吗（有人死于被猫抓伤吗）" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/news/article-91574.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">有人死于被猫抓伤吗（有人死于被猫抓伤吗）</h3>
-                            </a>
-                            <p class="mt-4">摘要：       本篇文章给大家谈谈有人死于被猫抓伤吗，以及有人死于被猫抓伤吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、真的有被猫抓伤死的人吗2、...        </p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月9日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-09">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/news/article-91573.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/2185035859b7710c0e4307b2d9117bf7.webp" alt="成都动物疫苗接种点 成都动物疫苗接种点查询" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/news/article-91573.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">成都动物疫苗接种点 成都动物疫苗接种点查询</h3>
-                            </a>
-                            <p class="mt-4">摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于成都动物疫苗接种点的问题，于是小编就整理了3个相关介绍成都动物疫苗接种点的解答，让我们一起看看吧。成都哪有给宠物办理检疫证的地方</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月9日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-04-08">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-4-8-clash-windows.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="4月8日更新21.2M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-4-8-clash-windows.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">4月8日更新21.2M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了加拿大、日本、欧洲、美国、香港、新加坡、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                4月8日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/date/2025-04/page-3.htm">&laquo;</a></li> <li><a href="/date/2025-04/">1</a></li><li><a href="/date/2025-04/page-2.htm">2</a></li><li><a href="/date/2025-04/page-3.htm">3</a></li><li class="active"><span>4</span></li><li><a href="/date/2025-04/page-5.htm">5</a></li><li><a href="/date/2025-04/page-6.htm">6</a></li><li><a href="/date/2025-04/page-7.htm">7</a></li> <li><a href="/date/2025-04/page-5.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-95328.htm">属羊的人养猫对财运有好处吗（属羊的养猫好吗风水说法）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈属羊的人养猫对财运有好处吗，以及属羊的养猫好吗风水说法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、家里养猫对财运好不好...     </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-87888.htm">成都宠物领养中心官网（成都宠物领养中心在哪）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈成都宠物领养中心官网，以及成都宠物领养中心在哪对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、启明小动物保护中心请问你们中心的具体地址..</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-12-free-subscribe-node.htm">3月12日更新20.9M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、欧洲、韩国、新加坡、加拿大、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-100538.htm">linux安装离线docker包教程,Centos7离线安装Docker</a></h4>
+                <p>工作原因需要在客户现场离线安装docker，网上看了很多，官方文档也查了一下，总结如下： (已在客户现场成功安装，Centos7，其他linux版本没试过，感觉应该问题不大) 1. 下载离线安装包 提</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-71288.htm">狗粮属于什么经营范围（狗粮属于什么商品类目）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈狗粮属于什么经营范围，以及狗粮属于什么商品类目对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、50的米桶可以装30的狗粮吗...     </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-99746.htm">宠物粮行业发展趋势分析报告（宠物粮行业发展趋势分析报告范文）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈宠物粮行业发展趋势分析报告，以及宠物粮行业发展趋势分析报告范文对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、你认为如今的宠物行业发展..</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-79380.htm">宠物店领养宠物多少钱一天啊（宠物店领养宠物要钱吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈宠物店领养宠物多少钱一天啊，以及宠物店领养宠物要钱吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、把狗狗放到宠物店寄养大概是多少钱一..</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
@@ -307,8 +377,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-85009.htm">动物疫苗的种类及特点有哪些呢（动物疫苗的使用方法及注意事项）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗的种类及特点有哪些呢的知识，其中也会对动物疫苗的使用方法及注意事项进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、常.</p>
+                <h4><a href="/free-nodes/2025-4-1-free-v2ray.htm">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、加拿大、欧洲、香港、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -317,78 +387,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-91574.htm">有人死于被猫抓伤吗（有人死于被猫抓伤吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈有人死于被猫抓伤吗，以及有人死于被猫抓伤吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、真的有被猫抓伤死的人吗2、...        </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-75965.htm">宠物猫打疫苗多少钱一针_养猫注意事项（给宠物猫打疫苗需要多少钱）</a></h4>
-                <p>摘要：       今天给各位分享宠物猫打疫苗多少钱一针_养猫注意事项的知识，其中也会对给宠物猫打疫苗需要多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-73943.htm">家养2个月小猫咬出血要紧吗（2个月的猫咬出血要紧吗）</a></h4>
-                <p>摘要：       今天给各位分享家养2个月小猫咬出血要紧吗的知识，其中也会对2个月的猫咬出血要紧吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、被2个月小.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-85728.htm">和田宠物医院污水处理价格多少（宠物店污水处理设备）</a></h4>
-                <p>摘要：       今天给各位分享和田宠物医院污水处理价格多少的知识，其中也会对宠物店污水处理设备进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物医院未配.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-30-free-shadowrocket-node.htm">3月30日更新19.7M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、美国、韩国、加拿大、欧洲、日本等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-12-node-share-links.htm">4月12日更新18.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、韩国、香港、美国、新加坡、加拿大等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-98955.htm">pytorch 自动构建任意层的深度神经网络(DNN)</a></h4>
-                <p>动手撸神经网络的代码，是大家常常遇到的问题。在设计自己的网络时，需要考虑网络大小，隐藏层层数，激活函数和参数初始化方法。最笨拙的方法就是固定下来，发生变化就要手动调整一次。这里介绍一种可以自动生生网络</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-78005.htm">原生实现C#和Lua相互调用-Unity3D可用</a></h4>
-                <p>引言 &nbsp;&nbsp;&nbsp;&nbsp;本篇简单介绍如何在C#中执行Lua脚本，传递数据到Lua中使用，以及Lua中调用C#导出的方法等。在Unity中开发测试，并打IL2CPP的And</p>
+                <h4><a href="/news/article-66770.htm">Nuxt3 rc.11 填坑 配置 element-plus</a></h4>
+                <p>网上各种版本都有，就是都不太行，不太完整。 先看下package.json {   "private": true,   "scripts": {     "build": "nuxt build",</p>
             </div>
         </div>
     </div>
@@ -399,7 +399,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">61</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">64</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
